Added section for managing users, and authentication and auththorization

--- a/backend/coudy/src/main/resources/application.properties
+++ b/backend/coudy/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=coudy
+server.port=9095
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+spring.profiles.active=dev
